Feat draft structure header/jumbotron

--- a/index.html
+++ b/index.html
@@ -18,5 +18,30 @@
     <!-- TITLE -->
     <title>Bootstrap_Freelancer</title>
   </head>
-  <body></body>
+  <body>
+    <header id="header">
+      <div class="container-fluid">
+        <div>logo</div>
+        <div>menu</div>
+      </div>
+    </header>
+    <main>
+      <section id="jumbotron">
+        <div class="row">
+          <img src="" alt="" />
+          <h1></h1>
+          <div class="row">
+            <div>riga</div>
+            <div>stella</div>
+            <div>riga</div>
+          </div>
+          <div></div>
+        </div>
+      </section>
+      <section id="portfolio"></section>
+      <section id="about"></section>
+      <section id="contact"></section>
+    </main>
+    <footer id="footer"></footer>
+  </body>
 </html>
