--- a/index.html
+++ b/index.html
@@ -38,10 +38,58 @@
           <div></div>
         </div>
       </section>
-      <section id="portfolio"></section>
-      <section id="about"></section>
-      <section id="contact"></section>
+      <section id="portfolio">
+        <h2></h2>
+        <div class="row">
+          <div>riga</div>
+          <div>stella</div>
+          <div>riga</div>
+        </div>
+        <div class="row">
+          <div class="col"></div>
+          <div class="col"></div>
+          <div class="col"></div>
+          <div class="col"></div>
+          <div class="col"></div>
+          <div class="col"></div>
+        </div>
+      </section>
+      <section id="about">
+        <h2></h2>
+        <div class="row">
+          <div>riga</div>
+          <div>stella</div>
+          <div>riga</div>
+        </div>
+        <div class="row">
+          <div class="col">testo1</div>
+          <div class="col">testo2</div>
+        </div>
+        <div class="">download</div>
+      </section>
+      <section id="contact">
+        <h2></h2>
+        <div class="row">
+          <div>riga</div>
+          <div>stella</div>
+          <div>riga</div>
+        </div>
+        <div class="row">
+          <div class="col"></div>
+          <div class="col"></div>
+          <div class="col"></div>
+          <div class="col"></div>
+          <div class="col">Send</div>
+        </div>
+      </section>
     </main>
-    <footer id="footer"></footer>
+    <footer id="footer">
+      <div class="row">
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
+      </div>
+      <div class="footer-bottom"></div>
+    </footer>
   </body>
 </html>
