--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
     <title>Bootstrap_Freelancer</title>
   </head>
   <body>
-    <header id="header">
-      <div class="container-fluid">
-        <div>logo</div>
-        <div>menu</div>
+    <header id="header" class="bg-primary">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col flex-grow-1">logo</div>
+          <div class="col flex-grow-0">menu</div>
+        </div>
       </div>
     </header>
     <main>
