--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col flex-grow-1">logo</div>
-          <div class="col flex-grow-0">menu</div>
+          <div class="col flex-grow-0 d-md-none">menu</div>
+          <div class="col flex-grow-0 d-none d-md-flex">menu1</div>
+          <div class="col flex-grow-0 d-none d-md-flex">menu2</div>
+          <div class="col flex-grow-0 d-none d-md-flex">menu3</div>
         </div>
       </div>
     </header>
