--- a/index.html
+++ b/index.html
@@ -32,15 +32,17 @@
     </header>
     <main>
       <section id="jumbotron">
-        <div class="row">
-          <img src="" alt="" />
-          <h1></h1>
-          <div class="row">
-            <div>riga</div>
-            <div>stella</div>
-            <div>riga</div>
+        <div class="container">
+          <div class="row flex-column align-items-center py-2">
+            <img class="box" src="" alt="" />
+            <h1 class="box-h"></h1>
+            <div class="row justify-content-center">
+              <div class="w-auto">riga</div>
+              <div class="w-auto">stella</div>
+              <div class="w-auto">riga</div>
+            </div>
+            <div class="box"></div>
           </div>
-          <div></div>
         </div>
       </section>
       <section id="portfolio">
