--- a/index.html
+++ b/index.html
@@ -47,18 +47,17 @@
       </section>
       <section id="portfolio">
         <h2></h2>
-        <div class="row">
-          <div>riga</div>
-          <div>stella</div>
-          <div>riga</div>
-        </div>
-        <div class="row">
-          <div class="col"></div>
-          <div class="col"></div>
-          <div class="col"></div>
-          <div class="col"></div>
-          <div class="col"></div>
-          <div class="col"></div>
+        <div class="row justify-content-center">
+          <div class="w-auto">riga</div>
+          <div class="w-auto">stella</div>
+          <div class="w-auto">riga</div>
+        <div class="row flex-column align-items-center">
+          <div class="col-12 box-h my-2"></div>
+          <div class="col-12 box-h my-2"></div>
+          <div class="col-12 box-h my-2"></div>
+          <div class="col-12 box-h my-2"></div>
+          <div class="col-12 box-h my-2"></div>
+          <div class="col-12 box-h my-2"></div>
         </div>
       </section>
       <section id="about">
