--- a/index.html
+++ b/index.html
@@ -46,27 +46,29 @@
         </div>
       </section>
       <section id="portfolio">
+        <div class="container">
+        <h2></h2>
+        <div class="row justify-content-center">
+            <div class="w-auto">riga</div>
+            <div class="w-auto">stella</div>
+           <div class="w-auto">riga</div>
+          <div class="row flex-column align-items-center flex-md-row flex-md-wrap">
+            <div class="col-12 col-md-6 col-lg-4 my-2 box-h bordered"></div>
+            <div class="col-12 col-md-6 col-lg-4 my-2 box-h bordered"></div>
+            <div class="col-12 col-md-6 col-lg-4 my-2 box-h bordered"></div>
+            <div class="col-12 col-md-6 col-lg-4 my-2 box-h bordered"></div>
+            <div class="col-12 col-md-6 col-lg-4 my-2 box-h bordered"></div>
+            <div class="col-12 col-md-6 col-lg-4 my-2 box-h bordered"></div>
+          </div>
+        </div>
+        </div>
+      </section>
+      <section id="about">
         <h2></h2>
         <div class="row justify-content-center">
           <div class="w-auto">riga</div>
           <div class="w-auto">stella</div>
           <div class="w-auto">riga</div>
-        <div class="row flex-column align-items-center">
-          <div class="col-12 box-h my-2"></div>
-          <div class="col-12 box-h my-2"></div>
-          <div class="col-12 box-h my-2"></div>
-          <div class="col-12 box-h my-2"></div>
-          <div class="col-12 box-h my-2"></div>
-          <div class="col-12 box-h my-2"></div>
-        </div>
-      </section>
-      <section id="about">
-        <h2></h2>
-        <div class="row">
-          <div>riga</div>
-          <div>stella</div>
-          <div>riga</div>
-        </div>
         <div class="row">
           <div class="col">testo1</div>
           <div class="col">testo2</div>
