--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
           <div class="w-auto">riga</div>
           <div class="w-auto">stella</div>
           <div class="w-auto">riga</div>
-        <div class="row">
-          <div class="col">testo1</div>
-          <div class="col">testo2</div>
+        <div class="row flex-column justify-content-center align-items-center flex-md-row flex-md-wrap">
+          <div class="col-10 col-md-5 my-2 box-h bordered">testo1</div>
+          <div class="col-10 col-md-5 my-2 box-h bordered">testo2</div>
         </div>
-        <div class="">download</div>
+        <div class="btn-primary d-flex justify-content-center">download</div>
       </section>
       <section id="contact">
         <h2></h2>
