--- a/index.html
+++ b/index.html
@@ -77,27 +77,28 @@
       </section>
       <section id="contact">
         <h2></h2>
-        <div class="row">
-          <div>riga</div>
-          <div>stella</div>
-          <div>riga</div>
-        </div>
-        <div class="row">
-          <div class="col"></div>
-          <div class="col"></div>
-          <div class="col"></div>
-          <div class="col"></div>
-          <div class="col">Send</div>
+        <div class="row justify-content-center">
+          <div class="w-auto">riga</div>
+          <div class="w-auto">stella</div>
+          <div class="w-auto">riga</div>
+        <div class="row flex-column justify-content-center align-items-center">
+          <div class="col-8 my-1 box-h"></div>
+          <div class="col-8 my-1 box-h"></div>
+          <div class="col-8 my-1 box-h"></div>
+          <div class="col-8 my-1 box-h"></div>
+          <div class="col-8 my-1 box-h">Send</div>
         </div>
       </section>
     </main>
     <footer id="footer">
-      <div class="row">
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
+      <div class="row flex-column justify-content-center align-items-center flex-md-row flex-md-wrap">
+        <div class="col-10 col-md-3 m-1 box-h"></div>
+        <div class="col-10 col-md-3 m-1 box-h"></div>
+        <div class="col-10 col-md-3 m-1 box-h"></div>
       </div>
-      <div class="footer-bottom"></div>
+      <div class="footer-bottom d-flex justify-content-center">
+        <div class="w-auto box-h">testo</div>
+      </div>
     </footer>
   </body>
 </html>
