--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Tartaglia Filippo" />
     <meta name="description" content="" />
+    <!-- FONT AWESOME -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- LINK BOOTSTRAP -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -19,14 +27,14 @@
     <title>Bootstrap_Freelancer</title>
   </head>
   <body>
-    <header id="header" class="bg-primary">
+    <header id="header" class="">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col flex-grow-1">logo</div>
-          <div class="col flex-grow-0 d-md-none">menu</div>
-          <div class="col flex-grow-0 d-none d-md-flex">menu1</div>
-          <div class="col flex-grow-0 d-none d-md-flex">menu2</div>
-          <div class="col flex-grow-0 d-none d-md-flex">menu3</div>
+          <div class="col flex-grow-1">START BOOTSTRAP</div>
+          <div class="col flex-grow-0 d-md-none btn btn-outline-secondary"><i class="fa-solid fa-bars" style="color: #7e838b;"></i></div>
+          <div class="col flex-grow-0 d-none d-md-flex">PORTFOLIO</div>
+          <div class="col flex-grow-0 d-none d-md-flex">ABOUT</div>
+          <div class="col flex-grow-0 d-none d-md-flex">CONTACT</div>
         </div>
       </div>
     </header>
