--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
     <main>
       <section id="jumbotron">
         <div class="container">
-          <div class="row flex-column align-items-center py-2">
-            <img class="box" src="" alt="" />
-            <h1 class="box-h"></h1>
-            <div class="row justify-content-center">
-              <div class="w-auto">riga</div>
-              <div class="w-auto">stella</div>
-              <div class="w-auto">riga</div>
+          <div class="row flex-column align-items-center py-2 text-center">
+            <img class="w-50" src="./img/avatar.svg" alt="avatar jumbotron" />
+            <h1 class="my-3">START BOOTSTRAP</h1>
+            <div class="row justify-content-center align-items-center">
+              <span class="riga"></span>
+              <div class="w-auto"><i class="fa-solid fa-star fa-2x"></i></div>
+              <span class="riga"></span>
             </div>
-            <div class="box"></div>
+            <h4 class="my-3">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h4>
           </div>
         </div>
       </section>
