--- a/index.html
+++ b/index.html
@@ -53,30 +53,42 @@
           </div>
         </div>
       </section>
-      <section id="portfolio">
+      <section id="portfolio" class="text-center">
         <div class="container">
-        <h2></h2>
-        <div class="row justify-content-center">
-            <div class="w-auto">riga</div>
-            <div class="w-auto">stella</div>
-           <div class="w-auto">riga</div>
+        <h2>PORTFOLIO</h2>
+        <div class="row justify-content-center align-items-center my-3">
+          <span class="riga"></span>
+          <div class="w-auto"><i class="fa-solid fa-star fa-2x"></i></div>
+          <span class="riga"></span>
           <div class="row flex-column align-items-center flex-md-row flex-md-wrap">
-            <div class="col-12 col-md-6 col-lg-4 my-2 box-h bordered"></div>
-            <div class="col-12 col-md-6 col-lg-4 my-2 box-h bordered"></div>
-            <div class="col-12 col-md-6 col-lg-4 my-2 box-h bordered"></div>
-            <div class="col-12 col-md-6 col-lg-4 my-2 box-h bordered"></div>
-            <div class="col-12 col-md-6 col-lg-4 my-2 box-h bordered"></div>
-            <div class="col-12 col-md-6 col-lg-4 my-2 box-h bordered"></div>
+            <div class="col-12 col-md-6 col-lg-4 my-2">
+              <img class="w-100 rounded" src="./img/cabin.png" alt="">
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 my-2">
+              <img class="w-100 rounded" src="./img/cake.png" alt="">
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 my-2">
+              <img class="w-100 rounded" src="./img/circus.png" alt="">
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 my-2">
+              <img class="w-100 rounded" src="./img/game.png" alt="">
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 my-2">
+              <img class="w-100 rounded" src="./img/safe.png" alt="">
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 my-2">
+              <img class="w-100 rounded" src="./img/submarine.png" alt="">
+            </div>
           </div>
         </div>
         </div>
       </section>
       <section id="about">
         <h2></h2>
-        <div class="row justify-content-center">
-          <div class="w-auto">riga</div>
-          <div class="w-auto">stella</div>
-          <div class="w-auto">riga</div>
+        <div class="row justify-content-center align-items-center">
+          <span class="riga"></span>
+          <div class="w-auto"><i class="fa-solid fa-star fa-2x"></i></div>
+          <span class="riga"></span>
         <div class="row flex-column justify-content-center align-items-center flex-md-row flex-md-wrap">
           <div class="col-10 col-md-5 my-2 box-h bordered">testo1</div>
           <div class="col-10 col-md-5 my-2 box-h bordered">testo2</div>
@@ -85,10 +97,10 @@
       </section>
       <section id="contact">
         <h2></h2>
-        <div class="row justify-content-center">
-          <div class="w-auto">riga</div>
-          <div class="w-auto">stella</div>
-          <div class="w-auto">riga</div>
+        <div class="row justify-content-center align-items-center">
+          <span class="riga"></span>
+          <div class="w-auto"><i class="fa-solid fa-star fa-2x"></i></div>
+          <span class="riga"></span>
         <div class="row flex-column justify-content-center align-items-center">
           <div class="col-8 my-1 box-h"></div>
           <div class="col-8 my-1 box-h"></div>
