--- a/index.html
+++ b/index.html
@@ -83,17 +83,17 @@
         </div>
         </div>
       </section>
-      <section id="about">
-        <h2></h2>
+      <section id="about" class="text-center">
+        <h2>ABOUT</h2>
         <div class="row justify-content-center align-items-center">
           <span class="riga"></span>
           <div class="w-auto"><i class="fa-solid fa-star fa-2x"></i></div>
           <span class="riga"></span>
         <div class="row flex-column justify-content-center align-items-center flex-md-row flex-md-wrap">
-          <div class="col-10 col-md-5 my-2 box-h bordered">testo1</div>
-          <div class="col-10 col-md-5 my-2 box-h bordered">testo2</div>
+          <div class="col-8 col-md-4 my-2 text-start">Freelancre is a free bootstrap theme created by Start Bootstrap. The download includes the completensource files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</div>
+          <div class="col-8 col-md-4 my-2 text-start">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</div>
         </div>
-        <div class="btn-primary d-flex justify-content-center">download</div>
+        <div class="d-block btn btn-outline-light text-center w-auto">download</div>
       </section>
       <section id="contact">
         <h2></h2>
