--- a/index.html
+++ b/index.html
@@ -95,19 +95,21 @@
         </div>
         <div class="d-block btn btn-outline-light text-center w-auto">download</div>
       </section>
-      <section id="contact">
-        <h2></h2>
+      <section id="contact" class="text-center">
+        <h2>CONTACT ME</h2>
         <div class="row justify-content-center align-items-center">
           <span class="riga"></span>
           <div class="w-auto"><i class="fa-solid fa-star fa-2x"></i></div>
           <span class="riga"></span>
-        <div class="row flex-column justify-content-center align-items-center">
-          <div class="col-8 my-1 box-h"></div>
-          <div class="col-8 my-1 box-h"></div>
-          <div class="col-8 my-1 box-h"></div>
-          <div class="col-8 my-1 box-h"></div>
-          <div class="col-8 my-1 box-h">Send</div>
-        </div>
+          <div class="container w-75">
+            <form class="d-flex flex-column align-items-center my-3" action="http://learning.tizianonicolai.com/request-catcher/">
+              <input class="border-0 border-bottom w-100 my-2" type="text" name="name" id="name" placeholder="Name">
+              <input class="border-0 border-bottom w-100 my-2" type="email" name="email" id="email" placeholder="Email Address">
+              <input class="border-0 border-bottom w-100 my-2" type="text" name="phone" id="phone" placeholder="Phone Number">
+              <textarea class="border-0 border-bottom w-100 my-2" name="message" id="message" cols="22" rows="10" placeholder="Message"></textarea>
+              <input class="btn btn-contact my-3 align-self-start" type="submit" value="Send">
+            </form>
+          </div>
       </section>
     </main>
     <footer id="footer">
