--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
         </div>
         <div class="d-block btn btn-outline-light text-center w-auto">download</div>
       </section>
-      <section id="contact" class="text-center">
-        <h2>CONTACT ME</h2>
+      <section id="contact" class="d-flex flex-column align-items-center">
+        <div class="container w-75">
+        <h2 class="text-center">CONTACT ME</h2>
         <div class="row justify-content-center align-items-center">
           <span class="riga"></span>
           <div class="w-auto"><i class="fa-solid fa-star fa-2x"></i></div>
           <span class="riga"></span>
-          <div class="container w-75">
             <form class="d-flex flex-column align-items-center my-3" action="http://learning.tizianonicolai.com/request-catcher/">
               <input class="border-0 border-bottom w-100 my-2" type="text" name="name" id="name" placeholder="Name">
               <input class="border-0 border-bottom w-100 my-2" type="email" name="email" id="email" placeholder="Email Address">
