--- a/index.html
+++ b/index.html
@@ -112,14 +112,30 @@
           </div>
       </section>
     </main>
-    <footer id="footer">
+    <footer id="footer" class="text-center pt-5">
       <div class="row flex-column justify-content-center align-items-center flex-md-row flex-md-wrap">
-        <div class="col-10 col-md-3 m-1 box-h"></div>
-        <div class="col-10 col-md-3 m-1 box-h"></div>
-        <div class="col-10 col-md-3 m-1 box-h"></div>
+        <div class="col-10 col-md-3 my-4">
+          <h4>LOCATION</h4>
+          <h4>2215 John Daniel Drive Clark, MO 54243</h4>
+        </div>
+        <div class="col-10 col-md-3 my-4">
+          <h4>AROUND THE WEB</h4>
+          <div class="icons">
+            <div class="d-inline-block border rounded-circle"><i class="fa-brands fa-facebook-f"></i></div>
+            <div class="d-inline-block border rounded-circle"><i class="fa-brands fa-google-plus-g"></i></div>
+            <div class="d-inline-block border rounded-circle"><i class="fa-brands fa-twitter"></i></div>
+            <div class="d-inline-block border rounded-circle"><i class="fa-brands fa-linkedin-in"></i></div>
+          </div>
+        </div>
+        <div class="col-10 col-md-3 my-4">
+          <h4>ABOUT FREELANCER</h4>
+          <p>Freelance is a free to use, open source Bootstrap theme created by <a href="#" class="link-info text-decoration-none">Start Bootstrap</a>.</p>
+        </div>
       </div>
-      <div class="footer-bottom d-flex justify-content-center">
-        <div class="w-auto box-h">testo</div>
+      <div class="footer-bottom d-flex justify-content-center align-items-center">
+        <div class="w-auto">
+          Copyright © Your Website 2019
+        </div>
       </div>
     </footer>
   </body>
