--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <div class="col-8 col-md-4 my-2 text-start">Freelancre is a free bootstrap theme created by Start Bootstrap. The download includes the completensource files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</div>
           <div class="col-8 col-md-4 my-2 text-start">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</div>
         </div>
-        <div class="d-block btn btn-outline-light text-center w-auto">download</div>
+        <div class="d-block btn btn-outline-light text-center w-auto"><i class="fa-solid fa-download"></i> Download</div>
       </section>
       <section id="contact" class="d-flex flex-column align-items-center">
         <div class="container w-75">
