Edit link header

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     <header id="header" class="">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col flex-grow-1">START BOOTSTRAP</div>
+          <div class="col flex-grow-1"><a class="font-weight-bold link-light text-decoration-none" href="#header">START BOOTSTRAP</a></div>
           <div class="col flex-grow-0 d-md-none btn btn-outline-secondary"><i class="fa-solid fa-bars" style="color: #7e838b;"></i></div>
-          <div class="col flex-grow-0 d-none d-md-flex">PORTFOLIO</div>
-          <div class="col flex-grow-0 d-none d-md-flex">ABOUT</div>
-          <div class="col flex-grow-0 d-none d-md-flex">CONTACT</div>
+          <div class="col flex-grow-0 d-none d-md-flex"><a class="font-weight-bold link-light text-decoration-none" href="#portfolio">PORTFOLIO</a></div>
+          <div class="col flex-grow-0 d-none d-md-flex"><a class="font-weight-bold link-light text-decoration-none" href="#about">ABOUT</a></div>
+          <div class="col flex-grow-0 d-none d-md-flex"><a class="font-weight-bold link-light text-decoration-none" href="#contact">CONTACT</a></div>
         </div>
       </div>
     </header>
