--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     <header id="header" class="">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col flex-grow-1"><a class="font-weight-bold link-light text-decoration-none" href="#header">START BOOTSTRAP</a></div>
+          <div class="col flex-grow-1"><a class="fw-bold link-light text-decoration-none" href="#header">START BOOTSTRAP</a></div>
           <div class="col flex-grow-0 d-md-none btn btn-outline-secondary"><i class="fa-solid fa-bars" style="color: #7e838b;"></i></div>
-          <div class="col flex-grow-0 d-none d-md-flex"><a class="font-weight-bold link-light text-decoration-none" href="#portfolio">PORTFOLIO</a></div>
-          <div class="col flex-grow-0 d-none d-md-flex"><a class="font-weight-bold link-light text-decoration-none" href="#about">ABOUT</a></div>
-          <div class="col flex-grow-0 d-none d-md-flex"><a class="font-weight-bold link-light text-decoration-none" href="#contact">CONTACT</a></div>
+          <div class="col flex-grow-0 d-none d-md-flex"><a class="fw-bold link-light text-decoration-none" href="#portfolio">PORTFOLIO</a></div>
+          <div class="col flex-grow-0 d-none d-md-flex"><a class="fw-bold link-light text-decoration-none" href="#about">ABOUT</a></div>
+          <div class="col flex-grow-0 d-none d-md-flex"><a class="fw-bold link-light text-decoration-none" href="#contact">CONTACT</a></div>
         </div>
       </div>
     </header>
@@ -57,9 +57,9 @@
         <div class="container">
         <h2>PORTFOLIO</h2>
         <div class="row justify-content-center align-items-center my-3">
-          <span class="riga"></span>
-          <div class="w-auto"><i class="fa-solid fa-star fa-2x"></i></div>
-          <span class="riga"></span>
+          <span class="riga mb-3"></span>
+          <div class="w-auto mb-3"><i class="fa-solid fa-star fa-2x"></i></div>
+          <span class="riga mb-3"></span>
           <div class="row flex-column align-items-center flex-md-row flex-md-wrap">
             <div class="col-12 col-md-6 col-lg-4 my-2">
               <img class="w-100 rounded" src="./img/cabin.png" alt="">
@@ -93,7 +93,7 @@
           <div class="col-8 col-md-4 my-2 text-start">Freelancre is a free bootstrap theme created by Start Bootstrap. The download includes the completensource files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</div>
           <div class="col-8 col-md-4 my-2 text-start">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</div>
         </div>
-        <div class="d-block btn btn-outline-light text-center w-auto"><i class="fa-solid fa-download"></i> Download</div>
+        <div class="d-block btn btn-outline-light text-center w-auto mt-4"><i class="fa-solid fa-download"></i> Download</div>
       </section>
       <section id="contact" class="d-flex flex-column align-items-center">
         <div class="container w-75">
