--- a/index.html
+++ b/index.html
@@ -28,7 +28,31 @@
   </head>
   <body>
     <header id="header" class="">
-      <div class="container">
+      <!-- NAVBAR BOOTSTRAP -->
+      <nav class="navbar navbar-expand-md bg-custom-dark bg-light">
+        <div class="container">
+          <a class="navbar-brand" href="#">BOOTSTRAP</a>
+          <button class="navbar-toggler btn btn-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="#portfolio">PORTFOLIO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#about">ABOUT</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contact">CONTACT</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+      <!-- NAVBAR ORIGINALE -->
+      <!-- <div class="container">
         <div class="row align-items-center">
           <div class="col flex-grow-1"><a class="fw-bold link-light text-decoration-none" href="#header">START BOOTSTRAP</a></div>
           <div class="col flex-grow-0 d-md-none btn btn-outline-secondary"><i class="fa-solid fa-bars" style="color: #7e838b;"></i></div>
@@ -36,7 +60,7 @@
           <div class="col flex-grow-0 d-none d-md-flex"><a class="fw-bold link-light text-decoration-none" href="#about">ABOUT</a></div>
           <div class="col flex-grow-0 d-none d-md-flex"><a class="fw-bold link-light text-decoration-none" href="#contact">CONTACT</a></div>
         </div>
-      </div>
+      </div> -->
     </header>
     <main>
       <section id="jumbotron">
@@ -138,5 +162,6 @@
         </div>
       </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
